--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.SpecificationAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.SpecificationAttributes.cshtml
@@ -2,6 +2,13 @@
 
 @using Telerik.Web.Mvc.UI;
 
+@{
+    Layout = "";
+
+    Html.AddCssFileParts(true, "~/Content/x-editable/bootstrap-editable.css");
+    Html.AppendScriptParts(true, "~/Content/x-editable/bootstrap-editable.js");
+}
+
 @if (Model.Id > 0)
 {
     /*hide "add spec" table if no attributes are defined*/
@@ -130,7 +137,10 @@
                 .Columns(columns =>
                 {
                     columns.Bound(x => x.SpecificationAttributeName).Width(200).ReadOnly();
-                    columns.Bound(x => x.SpecificationAttributeOptionName).Width(200).ReadOnly();
+                    columns.Bound(x => x.SpecificationAttributeOptionName)
+                        .ClientTemplate("<a href='#' data-options='<#= SpecificationAttributeOptionsJsonString #>' data-pk='<#= SpecificationAttributeOptionAttributeId #>' data-value='<#= SpecificationAttributeOptionId #>' id='<#= Id #>' class='editable editable-click spec-attr-opt'><#= SpecificationAttributeOptionName #></a>")
+                        .ReadOnly()
+                        .Width(300);
                     columns.Bound(x => x.AllowFiltering)
                         .Width(100)
                         .Template(item => @Html.SymbolForBool(item.AllowFiltering))
@@ -151,6 +161,11 @@
                     }).Width(180);
 
                 })
+                .ClientEvents(e =>
+                {
+                    e.OnEdit("OnGridEdit");
+                    e.OnRowDataBound("OnGridRowDataBound");
+                })
                 .Editable(x =>
                 {
                     x.Mode(GridEditMode.InLine);
@@ -162,6 +177,66 @@
                         .Delete("ProductSpecAttrDelete", "Product");
                 })
                 .EnableCustomBinding(true))
+
+            <script type="text/javascript">
+                $(function() {
+                    $.fn.editable.defaults.mode = 'inline';
+                });
+
+                function OnCommand(e) {
+                    var link = $(e.row).find(".spec-attr-opt");
+                    if(e.name == "edit") {
+                        initXEditable(link);
+                    }
+                }
+
+                function OnGridEdit(e) {
+                    link = $(e.currentTarget).find(".t-grid-edit-row .spec-attr-opt");
+                    initXEditable(link);
+                }
+
+                function OnGridRowDataBound(e) {
+                    var link = $(e.row).find(".spec-attr-opt");
+                    initXEditable(link);
+                }
+
+                function initXEditable(link){
+
+                    link.editable({
+                        type: 'select2',
+                        url: '@Url.Action("SetAttributeValue", "SpecificationAttribute")',
+                        unsavedclass: null,
+                        placement: "center",
+                        autotext: 'auto',
+                        select2: {
+                            minimumResultsForSearch: 8,
+                            data: link.data("options") || [],
+                            initSelection: function (el, fn) {
+                                var id = $(el).val();
+                                if (id !== "") {
+                                    fn({ id: link.data("value"), text: link.text() });
+                                }
+                            }
+                        },
+                        success: function(response, newValue)
+                        {
+                            // we have to overwrite grid data so the correct values are displayed when a value was saved with xeditable
+                            // else the data that initialy populated the client template would be displayed
+                            var grid = $('#specificationattributes-grid').data('tGrid');
+
+                            // get the index of the tr holding the updated value because the data is stored in an array
+                            var index = link.closest("tr").index();
+                            var data = grid.data[index];
+
+                            // overwrite data of option id and name
+                            data.SpecificationAttributeOptionId = newValue;
+                            data.SpecificationAttributeOptionName = response.name;
+
+                        }
+                    });
+
+                }
+            </script>
         </div>
     }
     else
