--- a/src/Presentation/SmartStore.Web/Views/Boards/Forum.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Forum.cshtml
@@ -13,6 +13,7 @@
     Layout = "~/Views/Shared/_ColumnsOne.cshtml";
 
     Html.AddTitleParts(Model.Name);
+    Html.AddMetaDescriptionParts(Model.Name);
 }
 <script type="text/javascript">
     function handleForumWatch(context) {
