--- a/src/Presentation/SmartStore.Web/Views/Boards/Topic.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Topic.cshtml
@@ -11,6 +11,7 @@
     Layout = "~/Views/Shared/_ColumnsOne.cshtml";
 
     Html.AddTitleParts(Model.Subject);
+    Html.AddMetaDescriptionParts(Model.Subject);
 }
 <script type="text/javascript">
     function handleTopicWatch(context) {
