Refactored payment methods to be providers

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1181,6 +1181,11 @@ table.order-edit td {
 	margin-left: -12px;
 }
 
+table.payment-method-features td {
+	padding: 2px 4px;
+	font-size: 12px;
+}
+
 
 /* Special icons */
 .icon-active-true {
