Further merge fixes

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -421,6 +421,10 @@ td.adminData > input[type="checkbox"] {
 	margin: 0;
 }
 
+.t-grid-edit-row .t-numerictextbox .t-arrow-up {
+    margin-left: -16px;
+}
+
 body .t-content.t-state-active {
     padding: 10px !important;
 }
