--- a/src/Presentation/SmartStore.Web/Administration/Views/GiftCard/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/GiftCard/_CreateOrUpdate.cshtml
@@ -96,7 +96,7 @@
                 @Html.ValidationMessageFor(model => model.GiftCardCouponCode)
 
                 <button type="button" name="generateCouponCode" id="generateCouponCode" class="btn">
-					<i class="icon-gear"></i>&nbsp;@T("Admin.GiftCards.Fields.GiftCardCouponCode.Generate")
+					<i class="fa fa-gear"></i>&nbsp;@T("Admin.GiftCards.Fields.GiftCardCouponCode.Generate")
 				</button>
 
                 <script type="text/javascript">
@@ -172,7 +172,7 @@
                 <td class="adminData">
                     @Model.IsRecipientNotified.ToString()
                     <button type="submit" name="notifyRecipient" value="notifyRecipient" class="btn">
-						<i class="icon-envelope"></i>&nbsp;@T("Admin.GiftCards.Fields.IsRecipientNotified.Notify")
+						<i class="fa fa-envelope"></i>&nbsp;@T("Admin.GiftCards.Fields.IsRecipientNotified.Notify")
 					</button>
                 </td>
             </tr>
