--- a/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/List.cshtml
@@ -43,7 +43,7 @@
 			&nbsp;
 		</td>
         <td class="adminData">
-            <button type="submit" id="btnSearch" class="btn"><i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")</button>
+            <button type="submit" id="btnSearch" class="btn"><i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")</button>
         </td>
     </tr>
 </table>
