--- a/src/Presentation/SmartStore.Web/Views/Product/EmailAFriend.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/EmailAFriend.cshtml
@@ -66,7 +66,7 @@
                 <div class="control-group">
                     <div class="controls">
                         <button type="submit" name="send-email" class="btn btn-primary send-email-a-friend-button">
-							<i class="icon-envelope"></i>&nbsp;@T("Products.EmailAFriend.Button")
+							<i class="fa fa-envelope"></i>&nbsp;@T("Products.EmailAFriend.Button")
 						</button>
                     </div>
                 </div>
