--- a/src/Plugins/Shipping.ByTotal/Views/ShippingByTotal/Configure.cshtml
+++ b/src/Plugins/Shipping.ByTotal/Views/ShippingByTotal/Configure.cshtml
@@ -274,7 +274,7 @@
         </text>)
         .FooterContent(@<text>
             <button id="addshippingbytotalrecord" type="button" class="btn btn-primary">
-				<i class="icon-ok"></i>&nbsp;@T("Common.AddNew")
+				<i class="fa fa-ok"></i>&nbsp;@T("Common.AddNew")
 			</button>
             <button type="button" class="btn" data-dismiss="modal">@T("Admin.Common.Cancel")</button>
         </text>)
