--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -167,7 +167,7 @@
 				@if (Model.CanCompleteOrder)
 				{
                     <button type="submit" name="completeorder" id="completeorder" class="btn btn-primary" value="@T("Enums.SmartStore.Core.Domain.Orders.OrderStatus.Complete")" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
-						<i class="icon-ok"></i>&nbsp;@T("Enums.SmartStore.Core.Domain.Orders.OrderStatus.Complete")
+						<i class="fa fa-check"></i>&nbsp;@T("Enums.SmartStore.Core.Domain.Orders.OrderStatus.Complete")
 					</button>
 				}
             </td>
