--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.cshtml
@@ -17,7 +17,7 @@
             @if (Model.DisplayPdfPackagingSlip)
             {
                 <a href="@Url.Action("PdfPackagingSlip", new { shipmentId = Model.Id })" class="btn">
-					<i class="icon-print"></i>
+					<i class="fa fa-print"></i>
 					@T("Admin.Orders.Shipments.PrintPackagingSlip")
 				</a>
             }
