--- a/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/Edit.cshtml
@@ -21,7 +21,7 @@
 				<button type="submit" name="notify-customer" value="notify-customer" class="btn"><i class="fa fa-envelope"></i>&nbsp;@T("Admin.ReturnRequests.NotifyCustomer")</button>
 			}
 
-            <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
+            <button type="submit" name="save" value="save" class="btn btn-primary"><i class="fa fa-check"></i>&nbsp;@T("Admin.Common.Save")</button>
             <button type="submit" name="save" value="save-continue" class="btn">@T("Admin.Common.SaveContinue")</button>
             <button type="submit" name="returnrequest-delete" value="returnrequest-delete" id="returnrequest-delete" class="btn btn-danger"><i class="fa fa-trash-o"></i>&nbsp;@T("Admin.Common.Delete")</button>
         </div>
