Shipping plugins should not throw "Shipping address is not set". They should process without that data or return nothing if it is mandatory. Also resolves #481.

--- a/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Grouped.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Grouped.Mobile.cshtml
@@ -32,7 +32,7 @@
                     @Html.Widget("mobile_productdetails_after_pictures")
                     @Html.Action("ProductManufacturers", new { productId = Model.Id })
                     @Html.Action("ReviewOverview", new { id = Model.Id })
-                    @Html.Action("EmailAFriendButton", new { productId = Model.Id })
+                    @Html.Action("EmailAFriendButton", new { id = Model.Id })
                     @Html.Action("CompareProductsButton", "Catalog", new { productId = Model.Id })
                 </div>
                 <div class="full-description">
