--- a/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.Mobile.cshtml
@@ -79,7 +79,7 @@
                     @Html.Widget("mobile_productdetails_after_pictures")
                     @Html.Action("ProductManufacturers", new { productId = Model.Id })
                     @Html.Action("ReviewOverview", new { id = Model.Id })
-                    @Html.Action("EmailAFriendButton", new { productId = Model.Id })
+                    @Html.Action("EmailAFriendButton", new { id = Model.Id })
                     @Html.Action("CompareProductsButton", "Catalog", new { productId = Model.Id })
                 </div>
 				@if (Model.ProductType == ProductType.BundledProduct)
