* More provider cleanup * Added DependentWidgetsAttribute

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_Providers.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_Providers.cshtml
@@ -66,7 +66,7 @@
 					</div>
 					<div class="module-info">
 						@{
-							string tip = item.PluginDescriptor != null ? T("Admin.Providers.ProvidingPlugin") + ": " + item.PluginDescriptor.FriendlyName : "";
+							string tip = item.ProvidingPluginFriendlyName.HasValue() ? T("Admin.Providers.ProvidingPlugin") + ": " + item.ProvidingPluginFriendlyName : "";
 						}
 						<span class="attr-name">@T("Common.SystemName"):</span>
 						<span class="attr-value" @Html.Attr("title", tip, tip.HasValue())>@item.SystemName</span>
