Renamed DevTools > SmartStore.DevTools

--- a/src/Plugins/SmartStore.DevTools/Views/DevTools/Configure.cshtml
+++ b/src/Plugins/SmartStore.DevTools/Views/DevTools/Configure.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartStore.Plugin.Developer.DevTools.ProfilerSettings
+﻿@model SmartStore.DevTools.ProfilerSettings
 @using SmartStore.Web.Framework;
 
 @Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
