Renamed ExternalAuth.Facebook > SmartStore.FacebookAuth

--- a/src/Plugins/SmartStore.FacebookAuth/Views/ExternalAuthFacebook/Configure.cshtml
+++ b/src/Plugins/SmartStore.FacebookAuth/Views/ExternalAuthFacebook/Configure.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "";
 }
-@model SmartStore.Plugin.ExternalAuth.Facebook.Models.ConfigurationModel
+@model SmartStore.FacebookAuth.Models.ConfigurationModel
 @using SmartStore.Web.Framework;
 @using (Html.BeginForm())
 {
