Renamed plugin SMS.Clickatell > SmartStore.Clickatell

--- a/src/Plugins/SmartStore.Clickatell/Views/SmsClickatell/Configure.cshtml
+++ b/src/Plugins/SmartStore.Clickatell/Views/SmsClickatell/Configure.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "";
 }
-@model SmartStore.Plugin.Sms.Clickatell.Models.SmsClickatellModel
+@model SmartStore.Clickatell.Models.SmsClickatellModel
 @using SmartStore.Web.Framework;
 
 <div class="alert alert-info">
