Renamed plugin Widget.GoogleAnalytics > SmartStore.GoogleAnalytics

--- a/src/Plugins/SmartStore.GoogleAnalytics/Views/WidgetsGoogleAnalytics/Configure.cshtml
+++ b/src/Plugins/SmartStore.GoogleAnalytics/Views/WidgetsGoogleAnalytics/Configure.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "";
 }
-@model SmartStore.Plugin.Widgets.GoogleAnalytics.Models.ConfigurationModel
+@model SmartStore.GoogleAnalytics.Models.ConfigurationModel
 @using SmartStore.Web.Framework;
 
 <div class="alert alert-info">
