--- a/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
@@ -16,8 +16,7 @@
 		Version @SmartStore.Core.SmartStoreVersion.CurrentFullVersion<br />
 		Copyright &copy; 1999-2014 SmartStore AG<br />
 		<a href="http://www.smartstore.com/" target="AboutTargetWin">www.smartstore.com</a>,
-		@*<a href="http://smartstore.codeplex.com/" target="AboutTargetWin">smartstore.codeplex.com</a>*@
-		<a href="https://github.com/smartstoreag" target="AboutTargetWin">github.com/smartstoreag</a>
+		<a href="https://github.com/smartstoreag/SmartStoreNET" target="AboutTargetWin">github.com/smartstoreag/SmartStoreNET</a>
 	</p>
 
 	<p>
