--- a/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/PaymentInfo.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/PaymentInfo.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "";
-    Html.AddCssFileParts(true, "~/Plugins/SmartStore.PayPal/Content/smartstore.paypalexpress.css");
+    Html.AddCssFileParts(true, "~/Plugins/SmartStore.PayPal/Content/smartstore.paypal.css");
 }
 @model SmartStore.PayPal.Models.PayPalExpressPaymentInfoModel
 @using SmartStore.Web.Framework;
