--- a/src/Plugins/SmartStore.PayPal/Views/PayPalStandard/PaymentInfo.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalStandard/PaymentInfo.cshtml
@@ -3,8 +3,8 @@
 }
 @using SmartStore.Web.Framework;
 
-<div class="clearfix" style="margin-bottom: 10px;">
-	<img src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/images/logo200x53.png")" alt="PayPal" style="float:left; width:200px; height:53px; margin-right:20px;" />
+<div class="clearfix paypal-standard-public">
+	<img src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/images/logo200x53.png")" alt="PayPal" class="logo" />
 	<span>
 		@T("Plugins.Payments.PayPalStandard.Fields.RedirectionTip")
 	</span>
