Added Invoice payment method to OfflinePayments plugin

--- a/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/GenericConfigure.cshtml
+++ b/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/GenericConfigure.cshtml
@@ -1,9 +1,10 @@
-﻿@{
+﻿@model SmartStore.OfflinePayment.Models.ConfigurationModelBase
+@using SmartStore.Web.Framework;
+
+@{
 	Layout = "";
 }
 
-@model SmartStore.OfflinePayment.Models.CashOnDeliveryConfigurationModel
-@using SmartStore.Web.Framework;
 
 @using (Html.BeginForm())
 {
