--- a/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/GenericPaymentInfo.cshtml
+++ b/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/GenericPaymentInfo.cshtml
@@ -1,9 +1,8 @@
-﻿@{
+﻿@model SmartStore.OfflinePayment.Models.PaymentInfoModelBase
+
+@{
 	Layout = "";
 }
-
-@model SmartStore.OfflinePayment.Models.CashOnDeliveryPaymentInfoModel
-@using SmartStore.Web.Framework;
 
 <table cellpadding="0" cellspacing="0" style="width: 100%">
 	<tr>
